# mail

./: .gitignore  README.md  package.json
solana-mail/: Cargo.toml
solana-mail/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/: App.css  App.js  App.jsx  index.js  theme.js
src/components/: Navbar.jsx  modal.js
src/models/: index.js
src/pages/: signin.js
src/services/: account.js  mail.js
src/store/: index.js
src/store/action_types/: account.js  index.js  mail.js  page.js
src/store/actions/: account.js  index.js  mail.js  page.js
src/store/reducers/: account.js  index.js  mail.js  page.js
