[package]
name = "mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.10"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.9.1"
solana-sdk = "1.9.1"
solana-validator = "1.9.1"

[lib]
crate-type = ["cdylib", "lib"]